--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,11 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 300px;
   }
-  
+  .header-text{
+    text-align: center;
+     margin-bottom: 5px;
+     background: #c9cbcc;
+  }
   h1 {
     text-align: center;
   }
